파이썬(플라스크)통신오류 픽스

--- a/class2/4주차(플라스크)/모바일청첩장프로젝트(플라스크)/templates/index.html
+++ b/class2/4주차(플라스크)/모바일청첩장프로젝트(플라스크)/templates/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta data-n-head="ssr" name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="/static/styles.css">
+        <link rel="stylesheet" href="../static/styles.css">
     </head>
     <body>
         <div class="container">
@@ -29,7 +29,7 @@
                     힘찬 출발의 디딤이 되어 주십시오.<br /><br />
                 </p>
             </div>
-            <img src="/static/a.jpg">
+            <img src="../static/a.jpg">
             <div class="row">
                 <table class="intro">
                     <tbody>
