--- a/class2/4주차(플라스크)/모바일청첩장프로젝트(플라스크)/static/styles.css
+++ b/class2/4주차(플라스크)/모바일청첩장프로젝트(플라스크)/static/styles.css
@@ -40,7 +40,7 @@ body {
 .first {
     width:100%;
     height: 100vh;
-    background-image: url(/static/e.jpg);
+    background-image: url("../static/e.jpg");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -85,7 +85,7 @@ body {
     padding: 70px 20px;
     text-align: center;
     font-family: 'GowunBatang-Regular';
-    background: url('/static/bg.png') repeat;
+    background: url('../static/bg.png') repeat;
 }
 
 .intro {
