--- a/class2/4주차(플라스크)/dangdangProject/static/dangdangStyle.css
+++ b/class2/4주차(플라스크)/dangdangProject/static/dangdangStyle.css
@@ -8,8 +8,16 @@ img {
 
 .info {
   display: inline-block;
-  font-size: 18px;
+  font-size: 17px;
   line-height: 25px;
   position: relative;
   bottom: 20px;
+}
+
+.btn {
+  position: relative;
+  left: 30px;
+  bottom: 30px;
+  width: 300px;
+  height: 50px;
 }
