당당프로젝트 플라스크 POST완성, 숫자천단위콤마 코드 득템, +추후에 자바스크립은 따로 보관할 것. 로직 복붙해서 쓰자 + 이후 작업: 좀 더 디테일하게 다듬기. 등록된 상품 삭제하는 거 진행, 제품 상세정보 팝업뜨게 진행, Ajax방법 숙지하기

--- a/class2/4주차(플라스크)/dangdangProject/static/dangdangStyle.css
+++ b/class2/4주차(플라스크)/dangdangProject/static/dangdangStyle.css
@@ -4,14 +4,14 @@ img {
 
 .p_list {
   list-style: none;
+  position: relative;
+  bottom: 30px;
 }
 
 .info {
   display: inline-block;
-  font-size: 17px;
-  line-height: 25px;
   position: relative;
-  bottom: 20px;
+  top: 36px;
 }
 
 .btn {
