--- a/class2/4주차(플라스크)/dangdangProject/templates/dangdang.html
+++ b/class2/4주차(플라스크)/dangdangProject/templates/dangdang.html
@@ -7,46 +7,27 @@
   <title>당당마켓</title>
   <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../static/dangdangStyle.css">
-  <script src="../static/dangdangjava.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
  </head>
  <body>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
    <ul class="p_list">
+    {% for pd in productlist %}
     <li>
      <img src="../static/prod1.jpg" alt="장난감 블록">
      <div class="info">
-      <strong>장난감 블록</strong><br />
-      <small>성수동</small><br />
-      20,000원
+      <strong>{{ pd.product_name }}</strong><br />
+      <small>{{ pd.location }}</small><br />
+      {{ pd.price }} <br />
+      "{{ pd.contenttext }}"
      </div>
     </li>
-    <li>
-      <img src="../static/prod2.jpg" alt="곰인형">
-      <div class="info">
-       <strong>곰인형</strong><br />
-       <small>성수동</small><br />
-       50,000원
-    </li>
-    <li>
-      <img src="../static/prod3.jpg" alt="곰인형2">
-      <div class="info">
-       <strong>곰인형2</strong><br />
-       <small>장안동</small><br />
-       9,000원
-    </li>
-    <li>
-      <img src="../static/prod4.jpg" alt="곰인형3">
-      <div class="info">
-       <strong>곰인형3</strong><br />
-       <small>고잔동</small><br />
-       30,000원
-    </li>
+    {% endfor %}
    </ul>
 
    <br />
    
-   <a href="/register"><button type="button" class="btn btn-primary btn-lg">상품등록하기</button></a>
+   <a href="/regi_index" type="button" class="btn btn-primary btn-lg">상품등록하기</a>
   
  </body>
 </html>
