--- a/class2/4주차(플라스크)/dangdangProject/templates/dangdangregi.html
+++ b/class2/4주차(플라스크)/dangdangProject/templates/dangdangregi.html
@@ -7,6 +7,7 @@
   <title>상품등록하기</title>
   <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="../static/dangdangjava.js"></script>
   <style>
     form {
       position: relative;
@@ -28,25 +29,28 @@
  </head>
  <body>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-   <form>
+   <form method="POST" action="/register">
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">상품명</label>
-      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <input name="pd_name" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
     </div>
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">지역</label>
-      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <input name="location" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
     </div>
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">가격</label>
-      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <input name="price" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" onkeyup="inputNumberFormat(this)">
     </div>
     <div class="mb-3">
       <label for="exampleFormControlTextarea1" class="form-label">내용</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+      <textarea name="contenttext" class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
     </div>
     <button type="submit" class="btn btn-primary">등록</button>
     <a href="/" role="button" class="btn btn-secondary" id="cancle">취소</a>
    </form>
-</body>
+ </body>
 </html>
+
+
+<!-- pattern="[0-9]*" inputmode="numeric" -->
