--- a/class2/4주차(플라스크)/dangdangProject/static/dangdangStyle.css
+++ b/class2/4주차(플라스크)/dangdangProject/static/dangdangStyle.css
@@ -5,19 +5,22 @@ img {
 .p_list {
   list-style: none;
   position: relative;
-  bottom: 30px;
 }
 
 .info {
   display: inline-block;
   position: relative;
-  top: 36px;
+  top: 20px;
 }
 
-.btn {
+#regi {
   position: relative;
   left: 30px;
   bottom: 30px;
   width: 300px;
   height: 50px;
+}
+
+.item-list {
+  all: unset;
 }
