슬릭이 안먹네...나중에 다시 픽스해야함

--- a/class2/4주차(플라스크)/weddingproject/static/styles.css
+++ b/class2/4주차(플라스크)/weddingproject/static/styles.css
@@ -165,3 +165,17 @@ body {
 .guestbook-row button {
   cursor: pointer;
 }
+
+.snowflake {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background: linear-gradient(white, white);
+  /* Workaround for Chromium's selective color inversion */
+  border-radius: 50%;
+  filter: drop-shadow(0 0 10px white);
+}
+
+.root_daum_roughmap {
+  width: 100% !important;
+}
