웨딩청첩장 프로젝트 완성. 다음에는 강의 안보고 만들어 보기

--- a/class2/4주차(플라스크)/weddingproject/static/styles.css
+++ b/class2/4주차(플라스크)/weddingproject/static/styles.css
@@ -16,6 +16,7 @@
     width: 100%;
     max-width: 600px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 img {
@@ -178,4 +179,19 @@ body {
 
 .root_daum_roughmap {
   width: 100% !important;
+}
+
+.slick-slide {
+  height: auto;
+}
+
+.mymodal-footer {
+ text-align: center;
+ padding: 10px;
+}
+
+.mymodal-footer button {
+  color: #ffffff;
+  background-color: #196ffff2;;
+  border: none;
 }
