--- a/class2/4주차(플라스크)/weddingproject/templates/index.html
+++ b/class2/4주차(플라스크)/weddingproject/templates/index.html
@@ -1,17 +1,24 @@
 <html>
     <head>
         <meta data-n-head="ssr" name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="../static/styles.css">
-        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         <script src="../static/puresnow.js" defer></script>
-        <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+        <link rel="stylesheet" href="../static/styles.css">
         <script>
          $(document).ready(function () {
-            $(".gallery").slick();
+            $(".gallery").slick({
+                adaptiveHeight: true
+            });
+            $('.gallery-image').click(function(){
+                let src = $(this).attr('src');
+                $("#modal-image").attr('src', src);
+                $('#exampleModal').modal('show');
+            });
          });
         </script>
     </head>
@@ -217,15 +224,28 @@
             </div>
             
             <div class="ro2">
+             <h4>갤러리</h4>
              <div class="gallery">
-              <img src="../static/a.jpg" />
-              <img src="../static/b.jpg" />
-              <img src="../static/c.jpg" />
-              <img src="../static/d.jpg" />
-              <img src="../static/e.jpg" />
+              <img src="../static/a.jpg" class="gallery-image" />
+              <img src="../static/b.jpg" class="gallery-image" />
+              <img src="../static/c.jpg" class="gallery-image" />
+              <img src="../static/d.jpg" class="gallery-image" />
+              <img src="../static/e.jpg" class="gallery-image" />
              </div>
             </div>
 
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+         <div class="modal-dialog">
+          <div class="modal-content">
+            <img id="modal-image">
+            <div class="mymodal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+         </div>
         </div>
     </body>
 </html>
