당당마켓 완성(주소입력소, 파일업로드 및 로드 등) 추후에 필요한 코드만 정리해야함

--- a/class2/4주차(플라스크)/dangdangProject/templates/dangdang.html
+++ b/class2/4주차(플라스크)/dangdangProject/templates/dangdang.html
@@ -16,7 +16,11 @@
     {% for pd in productlist %}
      <li>
       <button class="item-list" id="{{ pd.product_name }}">
+       {% if pd.product_image %}
+       <img src="../static/{{ pd.product_image }}">
+       {% else %}
        <img src="../static/prod1.jpg">
+       {% endif %}
        <div class="info">
         <strong>{{ pd.product_name }}</strong><br />
         <small>{{ pd.location }}</small><br />
