--- a/class2/4주차(플라스크)/dangdangProject/templates/dangdangregi.html
+++ b/class2/4주차(플라스크)/dangdangProject/templates/dangdangregi.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>상품등록하기</title>
   <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <script src="../static/dangdangjava.js"></script>
   <style>
@@ -25,18 +26,31 @@
       top: 5px;
     }
 
+    .btn.btn-secondary.location {
+      margin-left: 5px;
+      width: 70px;
+      height: 30px;
+      font-size: 12px;
+      font-weight: bold;
+    }
+
   </style>
  </head>
  <body>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-   <form method="POST" action="/register">
+   <!-- form에 들어가는 속성 숙지할 것 -->
+   <form enctype="multipart/form-data" method="POST" action="/register" id="regi-form">
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">상품명</label>
       <input name="pd_name" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
     </div>
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">지역</label>
-      <input name="location" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <button type="button" class="btn btn-secondary location" onclick="sample2_execDaumPostcode()">주소찾기</button>
+      <div id="layer" style="display:none;position:fixed;overflow:hidden;z-index:1;-webkit-overflow-scrolling:touch;">
+       <img src="//t1.daumcdn.net/postcode/resource/images/close.png" id="btnCloseLayer" style="cursor:pointer;position:absolute;right:-3px;top:-3px;z-index:1" onclick="closeDaumPostcode()" alt="닫기 버튼">
+      </div>
+      <input name="location" type="text" class="form-control location" id="exampleInputEmail1" aria-describedby="emailHelp">
     </div>
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">가격</label>
@@ -44,13 +58,90 @@
     </div>
     <div class="mb-3">
       <label for="exampleFormControlTextarea1" class="form-label">내용</label>
-      <textarea name="contenttext" class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+      <textarea name="contenttext"  id="exampleFormControlTextarea1" rows="4" 
+      style="display: none;"></textarea>
+      <div id="editor"></div>
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">이미지</label>
+      <input name="product__image" type="file" class="form-control product__image" id="exampleInputEmail1" aria-describedby="emailHelp">
     </div>
     <button type="submit" class="btn btn-primary">등록</button>
     <a href="/" role="button" class="btn btn-secondary" id="cancle">취소</a>
    </form>
+
+   <!-- Include the Quill library -->
+   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
+   <!-- Initialize Quill editor -->
+   <script>
+      var quill = new Quill('#editor', {
+         theme: 'snow'
+      });
+   </script>
+   <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+   <script>
+       // 우편번호 찾기 화면을 넣을 element
+       var element_layer = document.getElementById('layer');
+   
+       function closeDaumPostcode() {
+           // iframe을 넣은 element를 안보이게 한다.
+           element_layer.style.display = 'none';
+       }
+   
+       function sample2_execDaumPostcode() {
+           new daum.Postcode({
+               oncomplete: function(data) {
+                   // 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+   
+                   // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+                   // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                   var addr = ''; // 주소 변수
+                   var extraAddr = ''; // 참고항목 변수
+   
+                   //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+                   if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                       addr = data.roadAddress;
+                   } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                       addr = data.jibunAddress;
+                   }
+
+                   $(".form-control.location").val(addr);
+                   // iframe을 넣은 element를 안보이게 한다.
+                   // (autoClose:false 기능을 이용한다면, 아래 코드를 제거해야 화면에서 사라지지 않는다.)
+                   element_layer.style.display = 'none';
+               },
+               width : '100%',
+               height : '100%',
+               maxSuggestItems : 5
+           }).embed(element_layer);
+   
+           // iframe을 넣은 element를 보이게 한다.
+           element_layer.style.display = 'block';
+   
+           // iframe을 넣은 element의 위치를 화면의 가운데로 이동시킨다.
+           initLayerPosition();
+       }
+   
+       // 브라우저의 크기 변경에 따라 레이어를 가운데로 이동시키고자 하실때에는
+       // resize이벤트나, orientationchange이벤트를 이용하여 값이 변경될때마다 아래 함수를 실행 시켜 주시거나,
+       // 직접 element_layer의 top,left값을 수정해 주시면 됩니다.
+       function initLayerPosition(){
+           var width = 300; //우편번호서비스가 들어갈 element의 width
+           var height = 400; //우편번호서비스가 들어갈 element의 height
+           var borderWidth = 5; //샘플에서 사용하는 border의 두께
+   
+           // 위에서 선언한 값들을 실제 element에 넣는다.
+           element_layer.style.width = width + 'px';
+           element_layer.style.height = height + 'px';
+           element_layer.style.border = borderWidth + 'px solid';
+           // 실행되는 순간의 화면 너비와 높이 값을 가져와서 중앙에 뜰 수 있도록 위치를 계산한다.
+           element_layer.style.left = (((window.innerWidth || document.documentElement.clientWidth) - width)/2 - borderWidth) + 'px';
+           element_layer.style.top = (((window.innerHeight || document.documentElement.clientHeight) - height)/2 - borderWidth) + 'px';
+       }
+   </script>
  </body>
 </html>
 
 
-<!-- pattern="[0-9]*" inputmode="numeric" -->
+<!-- pattern="[0-9]*" inputmode="numeric" -아이폰인식시-->
