--- a/class2/4주차(플라스크)/weddingproject/templates/index.html
+++ b/class2/4주차(플라스크)/weddingproject/templates/index.html
@@ -1,6 +1,24 @@
-<html>
+<!DOCTYPE html>
+<html lang="ko">
     <head>
-        <meta data-n-head="ssr" name="viewport" content="width=device-width,initial-scale=1">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Wedding</title>
+        <!-- Opengraph -->
+        <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="Wedding" />
+        <meta property="og:title" content="김철수와 강유미가 결혼합니다!" />
+        <meta property="og:description" content="오셔서 많이 축복해주세요!" />
+        <meta property="og:image" content="../static/c.jpg" />
+        
+        <!-- Twittercard -->
+        <meta property="twitter:card" content="website" />
+        <meta property="twitter:site" content="Wedding" />
+        <meta property="twitter:title" content="김철수와 강유미가 결혼합니다!" />
+        <meta property="twitter:description" content="오셔서 많이 축복해주세요!" />
+        <meta property="twitter:image" content="../static/c.jpg" />
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         <script src="../static/puresnow.js" defer></script>
@@ -10,7 +28,7 @@
         <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
         <link rel="stylesheet" href="../static/styles.css">
         <script>
-         $(document).ready(function () {
+            $(document).ready(function () {
             $(".gallery").slick({
                 adaptiveHeight: true
             });
@@ -19,7 +37,7 @@
                 $("#modal-image").attr('src', src);
                 $('#exampleModal').modal('show');
             });
-         });
+            });
         </script>
     </head>
     <body>
