달력 돌아버리겠네

--- a/class2/finalReport/wedding2/templates/index.html
+++ b/class2/finalReport/wedding2/templates/index.html
@@ -69,15 +69,9 @@
         <h3>오후 1시</h3>
       </div>
       <div class="third__calender">
-        <table>
+        <table id="main__calender">
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+
           </tr>
         </table>
        <p class="third__calender__text">
