--- a/class2/finalReport/wedding2/static/style.css
+++ b/class2/finalReport/wedding2/static/style.css
@@ -51,7 +51,7 @@ footer {
 
 .back1 {
   background-color: var(--indipink);
-  box-shadow: 1px 0px 15px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 10px 0.3px rgba(0, 0, 0, 0.3);
 }
 
 .bold {
@@ -134,6 +134,11 @@ header {
   justify-content: space-between;
 }
 
+.fa-solid.fa-mobile-retro {
+  text-decoration: none;
+  color: black;
+}
+
 /* Section Third */
 section.third {
   text-align: center;
@@ -161,7 +166,7 @@ section.third .third__texts h3 {
   border: 1px solid black;
 }
 
-/* 캘린더 */
+/* Calender */
 .grid {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
@@ -183,4 +188,68 @@ section.third .third__texts h3 {
 
 .grid.claender__content div {
   font-weight: 400;
+}
+
+.third__calender__text {
+  margin-bottom: 0;
+  padding-bottom: 30px;
+}
+
+
+
+/* GuestBook */
+section.fourth {
+
+}
+
+.fourth__guestbook {
+  text-align: center;
+}
+
+.fourth__guestbook > h2 {
+  padding-top: 30px;
+  margin-top: 0;
+  font-size: 45px;
+}
+
+.fourth__guestbook__form {
+  width: 100%;
+}
+
+.input__name {
+  display: block;
+  margin: auto;
+  width: 70%;
+  padding: 5px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  border: none;
+  background-color: white;
+}
+
+.input__textarea {
+  display: block;
+  margin: auto;
+  width: 70%;
+  padding: 5px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  border: none;
+  background-color: white;
+}
+
+.btn__submit {
+  display: block;
+  margin: auto;
+  width: 30%;
+  height: 10%;
+  background-color: var(--indipink);
+  color: black;
+  border-color: #eac6c5;
+  margin-bottom: 50px;
+}
+
+.btn.btn-primary:hover {
+  background-color: #ff6b6b;
+  border-color: #ff9898;
 }
