--- a/class2/finalReport/wedding2/static/style.css
+++ b/class2/finalReport/wedding2/static/style.css
@@ -313,3 +313,45 @@ section.fourth {
   width: 80% !important;
   margin: auto !important;
 }
+
+/* Last */
+.last__container {
+  margin: auto;
+  height: auto;
+  padding-bottom: 100px;
+  text-align: center;
+}
+
+.last__container > h2 {
+  font-size: 40px;
+  padding-top: 40px;
+  padding-bottom: 10px;
+}
+
+.carousel-inner{
+  margin: auto;
+  width: 90%;
+}
+
+/* Modal */
+.modal-body {
+  width: 100% !important;
+}
+
+#modal-image {
+  width: 100%;
+}
+
+.btn-secondary {
+  margin: auto !important;
+  background-color: #ffd6d4;
+  border-color:#dabcb6;
+  font-size: 20px;
+  color: black;
+}
+
+.btn-secondary:hover {
+  background-color:#ff8989;
+  border-color:#ff8989;
+  color: white;
+}
