--- a/class2/finalReport/wedding2/templates/index.html
+++ b/class2/finalReport/wedding2/templates/index.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <!-- DecoLibrary -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/c37ef34cf6.js" crossorigin="anonymous"></script>
-  
   
   <!-- FONT  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,21 +18,24 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
-  
-  <!-- JavaScript -->
-  <script defer src="../static/js.js"></script>
 
+  <!-- JavaScript -->
+  <script defer src="../static/puresnow_fix.js"></script>
+  <script defer src="../static/js.js"></script>
+  
+  
   <!-- CSS -->
   <link rel="stylesheet" href="../static/style.css" />
+
   
   <title>김아무개씨와 이사랑씨의 청첩장</title>
  </head>
- <body onload="onload__calender()">
+ <body>
   <div class="container">
-
     <!-- 대문 -->
     <header class="first">
       <div class="overlay">
+       <div id="snow" count="200"></div>
        <h1 class="first__title">
         김아무개
         <br />
@@ -46,6 +48,7 @@
        </p>
       </div>
     </header>
+
     
     <!-- 본론 -->
     <main>
@@ -95,7 +98,7 @@
         
        </div> 
        <p class="third__calender__text">
-        아무개와 &hearts; 사랑의 결혼식 {{}}일 남았습니다.
+        아무개와 &hearts; 사랑의 결혼식 {{ calc }}일 남았습니다.
        </p>
       </div>
      </section>
@@ -104,17 +107,28 @@
       <div class="overlay2">
        <div class="fourth__guestbook">
         <h2>방명록</h2>
-        <form class="fourth__guestbook__form">
-         <input class="input__name" type="text" placeholder="이름"/>
-         <textarea class="input__textarea" name="guestbook__textarea" cols="30" rows="10" placeholder="내용"></textarea>
+
+        <!-- 사용자가 입력하는 데이터를 get하여 Mongodb로 insert_one 하는 곳 -->
+        <form class="fourth__guestbook__form" method="POST" action="/guest_write" >
+          <!-- 플라스크 통해 몽고db연결시. form태그 중요. method에 POST/GET방식 선택, action으로 route주소 입력 -->
+         <input class="input__name" type="text" placeholder="이름" name="hostname"/>
+         <textarea class="input__textarea" name="guestbooktextarea" cols="30" rows="10" placeholder="내용"></textarea>
+         <!-- input이나 textarea의 값을 가져오는 경로는 name에 입력. name에 입력된 것을 똑같이 파이썬에 걸어주면 둘이 연결됨 -->
          <button type="submit" class="btn btn-primary btn__submit">남기기</button>
         </form>
+        
+        <!-- 사용자가 form에 썼던 것을 Mongodb에서 find하는 것, find는 몽고에 있는 정보를 모두 가져옴 -->
         <table class="fourth__guestbook__posting">
-         <tr class="posting__lineup">
-          <td class="posting__name"></td>
-          <td class="posting__content"></td>
-         </tr>
+         <tbody>
+          {% for guestbook in guestbookImportInput %} 
+          <tr class="posting__lineup">
+           <td class="posting__name">{{ guestbook.name }}</td>
+           <td class="posting__content">{{ guestbook.textarea}}</td>
+          </tr>
+          {% endfor %}
+         </tbody>
         </table>
+        
        </div>
       </div>
      </section>
