당당마켓 메인 페이지 완성

--- a/class2/finalReport/dangdang2/templates/indexRegi.html
+++ b/class2/finalReport/dangdang2/templates/indexRegi.html
@@ -16,9 +16,9 @@
 
   <!-- CSS, JS -->
   <script defer src="../static/DangJS.js"></script>
-  <link rel="stylesheet" href="../static/DangStyle.css" />
+  <link rel="stylesheet" href="../static/DangRegiStyle.css" />
 
-  <title>DangDang2</title>
+  <title>DangDang2_Register</title>
  </head>
  <body>
    <!-- 대문 -->
