--- a/class2/finalReport/dangdang2/static/DangStyle.css
+++ b/class2/finalReport/dangdang2/static/DangStyle.css
@@ -72,7 +72,8 @@ header {
 }
 
 header .inner {
-  background-color: rgb(255, 249, 233);
+  border-left: 0.5px solid var(--gray);
+  border-right: 0.5px solid var(--gray);
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -105,8 +106,9 @@ main {
 
 main .inner .product {
   height: 100vh;
-  background-color: rgb(255, 249, 233);
   color: var(--fontColor);
+  border-left: 0.5px solid var(--gray);
+  border-right: 0.5px solid var(--gray);
 }
 
 main .inner .product h3  {
@@ -154,7 +156,7 @@ main .inner .product .product__list ul {
   font-family: 'Noto Sans KR', sans-serif;
   margin: 20px;
   font-size: 10px;
-  right: 20px;
+  right: 10px;
   top: 13px;
   background-color: var(--blue);
   color: #606060;
@@ -168,11 +170,17 @@ footer {
   position: relative;
   /* background-color: #9c9c9c; */
   width: 100%;
-  height: 10vh;
+  height: 6vh;
+}
+
+footer .inner {
+  border-left: 0.5px solid var(--gray);
+  border-right: 0.5px solid var(--gray);
 }
 
 .footer__copyright {
   width: 100%;
-  height: 10vh;
+  height: 6vh;
+  border-radius: 20px 20px 0 0;
   background-color: #969696
 }
