--- a/class2/finalReport/dangdang2/templates/index.html
+++ b/class2/finalReport/dangdang2/templates/index.html
@@ -52,7 +52,9 @@
 
    <footer>
     <div class="inner">
-      <div class="footer__copyright"></div>
+      <div class="footer__copyright">
+        <p>2023. 02. 21.   Drew_Choi</p>
+      </div>
     </div>
    </footer>
  </body>
