--- a/class2/finalReport/dangdang2/static/DangStyle.css
+++ b/class2/finalReport/dangdang2/static/DangStyle.css
@@ -184,3 +184,32 @@ footer .inner {
   border-radius: 20px 20px 0 0;
   background-color: #969696
 }
+
+/* FOOTER */
+footer {
+  position: relative;
+  /* background-color: #9c9c9c; */
+  width: 100%;
+  height: 6vh;
+}
+
+footer .inner {
+  border-left: 0.5px solid var(--gray);
+  border-right: 0.5px solid var(--gray);
+}
+
+.footer__copyright {
+  width: 100%;
+  height: 6vh;
+  border-radius: 20px 20px 0 0;
+  background-color: #969696;
+}
+
+.footer__copyright > p {
+  text-align: center;
+  margin-bottom: 0px;
+  padding-top: 20px;
+  font-size: 12px;
+  color: #fefefe;
+  letter-spacing: 1px;
+}
